# jpgEnc

./: .gitignore  CMakeLists.txt  README.md  generate_vs2013_projects.bat  generate_vs2013_projects_x64.bat  jpgEnc.natvis
include/: Bitstream.hpp  BitstreamGeneric.hpp  BitstreamLong.hpp  Coding.hpp  Dct.hpp  Huffman.hpp  Image.hpp  JpegSegments.hpp
include/test/: unittest.hpp
src/: CMakeLists.txt  Huffman.cpp  Image.cpp  main.cpp
src/test/: BitstreamGenericTest.cpp  BitstreamLongTest.cpp  BitstreamTest.cpp  CMakeLists.txt  CodingTest.cpp  DctTest.cpp  HuffmanTest.cpp  ImageTest.cpp  PackageMergeTest.cpp  common.cpp  perfTest.cpp
src/test/res/: tester_DC.ppm  tester_RGB_26x19.ppm  tester_black.ppm  tester_black_4x4.ppm  tester_blue.ppm  tester_blue_4x4.ppm  tester_green.ppm  tester_green_12x8.ppm  tester_green_4x4.ppm  tester_green_blue_12x8.ppm  tester_green_blue_8x12.ppm  tester_p3_12x8.ppm  tester_p3_8x8.ppm  tester_red.ppm  tester_red_4x4.ppm  tester_text_32x32.ppm  tester_white.ppm  tester_white_4x4.ppm  tester_white_gray_black_32x32.ppm
